2013-12-18  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: implemented reading DTS audio tracks from
        MP4 files (with ESDS object type ID == 0xA9 (decimal 169) or
        FourCC == 'DTS ' or 'dtsc').

2013-12-18  Ralph Giles  <giles@mozilla.com>

        * mkvmerge: enhancement: allowed muxing Opus to WebM files.

        * mkvmerge: bug fix: Fixed the mapping of the Opus element »seek
        pre-roll« and »pre-skip« to the Matroska elements »track seek
        pre-roll« and »codec delay«. Remuxing Matroska files without Opus
        created with earlier versions of MKVToolNix is enough to fix such
        a file.

2013-12-15  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixing the bitstream timing information of
        h.264/AVC writes clean values for 25000/1001 frames per second
        video (e.g. de-telecined PAL @ 29.97).

2013-12-07  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed a crash in during drag & drop operations in
        mmg's chapter editor.

2013-12-01  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.6.0.

        * mmg: new feature: implemented drag & drop in the chapter
        editor. Implements #929.

2013-11-24  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed an assertion in wxLogMessage() due to wrong
        format string/argument data types caused by changes in wxWidgets
        3.0.0. See Debian bug #730273.

        * mkvmerge: bug fix: improved resilience against MP4 files with
        obviously wrong entries in the 'sample size table' (STSZ) atom.

        * mkvmerge: bug fix: improved VC1 frame type detection so that it
        works even for streams without entry points.

2013-11-14  Moritz Bunkus  <moritz@bunkus.org>

        * mkvinfo: bug fix: at most the lower 32bits of the track numbers
        and track UIDs elements were output, even if the element in the
        file used more bits. Fixes #935.
