@@ -222,6 +222,7 @@ struct mmg_options_t {
   bool check_for_updates;
   wxString priority;
   wxArrayString popular_languages;
+  wxString default_subtitle_charset;
   wxString default_cli_options;
 
   mmg_options_t()
