@@ -1,3 +1,9 @@
+2013-12-27  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: enhancement: The user can select the default subtitle
+        character set to use for newly added subtitle tracks in the
+        preferences dialog.
+
 2013-12-18  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: new feature: implemented reading DTS audio tracks from
